--- a/colaboradores.html
+++ b/colaboradores.html
@@ -86,18 +86,49 @@
             <div class="cardsConjunto">
 
               <div class="cards">
-                <div class="ayla"> Ayla </div>
+                <div class="ayla"> 
+                  <img src="" width="100px">
+                  <span>Ayla</span>
+
+                  <div class="social-ayla">
+                    <a href="" target="_blank">
+                      <img src="images/github.svg">
+                    </a>
+                    <a href="" target="_blank">
+                      <img src="images/linkedin.svg">
+                    </a>
+                    
+                  </div>
+                </div>
               </div>
 
               <div class="cards">
-                <div class="elizabeth">  Elizabeth </div>
+                <div class="elizabeth"> 
+                  <img src="https://avatars.githubusercontent.com/u/62735673?v=4" width="100px">
+                  <span class="nome-elizabeth">ELIZABETH</span>
+
+                  <div class="social-elizabeth">
+                    <a href="https://github.com/elizabethesantos" target="_blank">
+                      <img src="images/github.svg">
+                    </a>
+                    <a href="https://www.linkedin.com/in/elizabeth-santos-322196197/" target="_blank">
+                      <img src="images/linkedin.svg">
+                    </a>
+                    <a href="https://twitter.com/Elizabethsan24" target="_blank">
+                      <img src="images/twitter.svg">
+                    </a>
+                    <a href="https://elizabethesantos.github.io/portfolio-dio/" target="_blank">
+                      <img src="images/person.svg">
+                    </a>
+                  </div>
+                </div>
               </div>
 
               <div class="cards">
                 <div class="noah">  Noah </div>
               </div>                      
 
-<div class="cards cardsOliver">
+            <div class="cards cardsOliver">
               <div class="oliver">
                 <div class="oliverCardFrente">
                   <i class="fa-solid fa-laptop-code">
